--- a/src/Skybolt/CMakeLists.txt
+++ b/src/Skybolt/CMakeLists.txt
@@ -1,9 +1,10 @@
 add_subdirectory (AircraftHud)
 
-OPTION(BUILD_MAP_FEATURES_CONVERTER "Build MapFeaturesConverter")
-if (BUILD_MAP_FEATURES_CONVERTER)
-	add_subdirectory (MapFeaturesConverter)
-endif()
+
+
+add_subdirectory (SkyboltSim)
+add_subdirectory (SkyboltSimTests)
+add_subdirectory (SkyboltVis)
 
 add_subdirectory (SkyboltCommon)
 add_subdirectory (SkyboltCommonTests)
@@ -16,9 +17,11 @@ endif()
 
 add_subdirectory (SkyboltEnginePlugins)
 
+#add_subdirectory (SkyboltVisTests)
 add_subdirectory (SkyboltEngineTests)
-add_subdirectory (SkyboltSim)
-add_subdirectory (SkyboltSimTests)
-add_subdirectory (SkyboltVis)
-add_subdirectory (SkyboltVisTests)
-add_subdirectory (TileMapGenerator)
+
+#add_subdirectory (TileMapGenerator)
+OPTION(BUILD_MAP_FEATURES_CONVERTER "Build MapFeaturesConverter")
+if (BUILD_MAP_FEATURES_CONVERTER)
+	add_subdirectory (MapFeaturesConverter)
+endif()
