--- a/src/Skybolt/SkyboltEnginePlugins/Bullet/CMakeLists.txt
+++ b/src/Skybolt/SkyboltEnginePlugins/Bullet/CMakeLists.txt
@@ -5,13 +5,13 @@ include_directories("./")
 include_directories("../")
 include_directories("../../")
 
-find_package(BULLET REQUIRED)
-include_directories(${BULLET_INCLUDE_DIRS})
+find_package(Bullet REQUIRED)
+include_directories(${Bullet_INCLUDE_DIRS})
 add_definitions(-DBT_USE_DOUBLE_PRECISION)
 
 set(LIBS
 SkyboltEngine
-${BULLET_LIBRARIES}
+${Bullet_LIBRARIES}
 )
 
 add_library(${TARGET_NAME} ${SKYBOLT_PLUGINS_LIBRARY_TYPE} ${SrcFiles})
@@ -19,16 +19,16 @@ add_library(${TARGET_NAME} ${SKYBOLT_PLUGINS_LIBRARY_TYPE} ${SrcFiles})
 target_link_libraries (${TARGET_NAME} ${LIBS})
 
 target_include_directories(${TARGET_NAME} PUBLIC
-	${BULLET_INCLUDE_DIRS}
+	${Bullet_INCLUDE_DIRS}
 )
 
 set_target_properties(${TARGET_NAME} PROPERTIES WINDOWS_EXPORT_ALL_SYMBOLS TRUE) #Export symbols for tests
 set_engine_plugin_target_properties(${TARGET_NAME})
 skybolt_plugin_install(${TARGET_NAME})
 
-if(MSVC AND ${MSVC_VERSION} GREATER_EQUAL 1915)
-  # You must acknowledge that you understand MSVC resolved a byte alignment issue in this compiler
-  # We get this due to using Eigen objects and allocating those objects with make_shared
-  # TODO: Fix
-  target_compile_definitions( ${TARGET_NAME} PUBLIC _DISABLE_EXTENDED_ALIGNED_STORAGE )
-endif()
+# if(MSVC AND ${MSVC_VERSION} GREATER_EQUAL 1915)
+#   # You must acknowledge that you understand MSVC resolved a byte alignment issue in this compiler
+#   # We get this due to using Eigen objects and allocating those objects with make_shared
+#   # TODO: Fix
+#   target_compile_definitions( ${TARGET_NAME} PUBLIC _DISABLE_EXTENDED_ALIGNED_STORAGE )
+# endif()
