--- a/src/Skybolt/CMakeLists.txt
+++ b/src/Skybolt/CMakeLists.txt
@@ -1,14 +1,16 @@
 add_subdirectory (AircraftHud)
 
-
+add_subdirectory (SkyboltCommon)
+add_subdirectory (SkyboltCommonTests)
 
 add_subdirectory (SkyboltSim)
 add_subdirectory (SkyboltSimTests)
-add_subdirectory (SkyboltVis)
 
-add_subdirectory (SkyboltCommon)
-add_subdirectory (SkyboltCommonTests)
+add_subdirectory (SkyboltVis)
+add_subdirectory (SkyboltVisTests)
+
 add_subdirectory (SkyboltEngine)
+add_subdirectory (SkyboltEngineTests)
 
 OPTION(BUILD_PYTHON_BINDINGS "Build Python Bindings")
 if (BUILD_PYTHON_BINDINGS)
@@ -17,11 +19,8 @@ endif()
 
 add_subdirectory (SkyboltEnginePlugins)
 
-#add_subdirectory (SkyboltVisTests)
-add_subdirectory (SkyboltEngineTests)
-
-#add_subdirectory (TileMapGenerator)
+add_subdirectory (TileMapGenerator)
 OPTION(BUILD_MAP_FEATURES_CONVERTER "Build MapFeaturesConverter")
 if (BUILD_MAP_FEATURES_CONVERTER)
-	add_subdirectory (MapFeaturesConverter)
+	#add_subdirectory (MapFeaturesConverter)
 endif()
