--- a/src/Skybolt/SkyboltEnginePlugins/CMakeLists.txt
+++ b/src/Skybolt/SkyboltEnginePlugins/CMakeLists.txt
@@ -1,13 +1,13 @@
 OPTION(BUILD_BULLET_PLUGIN "Build Bullet Plugin")
 if (BUILD_BULLET_PLUGIN)
-	add_subdirectory(Bullet)
+	#add_subdirectory(Bullet)
 endif()
 
 OPTION(BUILD_CIGI_COMPONENT_PLUGIN "Build CIGI Component Plugin")
 if (BUILD_CIGI_COMPONENT_PLUGIN)
-	add_subdirectory(CigiComponent)
-	add_subdirectory(CigiComponentTests)
-	add_subdirectory(CigiTestHost)
+	# add_subdirectory(CigiComponent)
+	# add_subdirectory(CigiComponentTests)
+	# add_subdirectory(CigiTestHost)
 endif()
 
 OPTION(BUILD_FFT_OCEAN_PLUGIN "Build FFT Ocean Plugin")
