--- a/src/Skybolt/SkyboltSim/CMakeLists.txt
+++ b/src/Skybolt/SkyboltSim/CMakeLists.txt
@@ -12,6 +12,6 @@ set(LIBRARIES
 
 add_library(${LIB_NAME} STATIC ${SOURCE_FILES} ${HEADER_FILES})
 
-target_link_libraries(${LIB_NAME} ${LIBRARIES})
+target_link_libraries(${LIB_NAME} PUBLIC ${LIBRARIES})
 
 skybolt_install(${LIB_NAME})
